Drop supperfluous and wrong inactive check in translucency effect

Left over from the cleanup which basically resulted in the active window
being put to the inactive's window opacity.

Thanks for the early notification of that issue.

BUG: 306449
FIXED-IN: 4.9.2